--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 }
 
 .bg .content .title {
-    color: #c4c4c4;
+    color: #08cfe9;
 }
 
 .navbar.is-fixed-top {
@@ -53,7 +53,7 @@
 
 #cart-btn {
     font-size: xx-large;
-    color: #b1882f;
+    color: #5b0cda;
     background-color: transparent;
     border-color: transparent;
     transition-property: color;
@@ -61,7 +61,7 @@
 }
 
 #cart-btn:hover {
-    color: #ffb700;
+    color: #e00b0b;
     border-color: transparent;
 }
 
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #d56f30;
+    background-color: #13d8c8;
     border-radius: 50%;
     position: absolute;
     color: #c6c6c6;
@@ -88,9 +88,9 @@
 }
 
 #cart-items-sum {
-    font-size: 20px;
+    font-size: 40px;
     color: rgba(255, 255, 255, 0.57);
-    width: 60px;
+    width: 80px;
     text-align: end;
 }
 
@@ -123,7 +123,7 @@
 
 .card img {
     width: 100%;
-    height: 240px;
+    height: 250px;
     object-fit: cover;
 }
 
